# Little-UNIkeEN-Bot

./: .gitignore  .gitkeep  .pre-commit-config.yaml  404.html  License.md  README.md  build.sh  independentBroadcasting.py  independent_broadcasting.py  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
AI001/: index.html
about/: index.html
configs/: example.json
cs096/: index.html
docs/: about.md  index.md  license.md  progressiveness.md  test.md  update-plan.md
license/: index.html
plugins/: EE0502.py  abstract.py  addGroupRecorder.py  add_group_recorder.py  advertisement.py  apexStatus.py  apex_status.py  arxiv.py  autoRepoke.py  auto_repoke.py  bilibiliLive.py  bilibiliLive_v2.py  bilibiliSubscribe.py  bilibiliSubscribe_v2.py  bilibili_live.py  bilibili_subscribe_v2.py  bzCorups.py  canvasSync.py  canvas_sync.py  charPic.py  chatWithAnswerbook.py  chatWithNLP.py  chat_with_answerbook.py  chat_with_nlp.py  checkCoins.py  check_coins.py  clearRecord.py  clear_record.py  douyinSubscribe.py  dropOut.py  eavesdrop.py  emojiKitchen.py  faq.py  faq_v2.py  fileRecorder.py  file_recorder.py  genshin.py  getDekt.py  getDekt_v2.py  getJwc.py  (+86 more)
progressiveness/: index.html
resources/: sjtuHesuan.json
scripts/: broadcast-message.py  download-file.py  export-sql.py
search/: search_index.json
site/: index.html  sitemap.xml
test/: index.html
update-plan/: index.html
utils/: accountOperation.py  account_operation.py  ashareAPI.py  ashare_api.py  basicConfigs.py  basicEvent.py  basicEventForGocqhttp.py  basicEventForLagrange.py  basic_configs.py  basic_event.py  bilibili_api_fixed.py  bufferQueue.py  buffer_queue.py  (+23 more)
(+258 files in other folders)
