[project]
name = "little-unikeen-bot"
version = "1.4.1"
description = "一个由 Python 编写的轻量级、可扩展的QQ机器人前端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "beautifulsoup4>=4.12.2",
    "bilibili-api-python==16.3.0",
    "browsermob-proxy>=0.8.0",
    "cairosvg>=2.8.2",
    "chess>=1.11.2",
    "emoji>=2.15.0",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.26.0",
    "icalendar>=6.3.1",
    "imgkit>=1.2.3",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "lxml>=5.3.2",
    "matplotlib>=3.10.7",
    "mysql-connector-python>=9.4.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=10.4.0",
    "pinyin>=0.4.0",
    "psutil>=7.1.1",
    "pydantic>=2.12.3",
    "pyexecjs>=1.5.1",
    "pyjsparser>=2.7.1",
    "pymysql>=1.1.2",
    "pypinyin>=0.55.0",
    "pyspellchecker>=0.8.3",
    "qrcode>=7.4.2",
    "requests>=2.32.5",
    "selenium>=4.37.0",
    "tinydb>=4.8.2",
    "tinyrecord>=0.2.0",
    "tqdm>=4.66.6",
    "ujson>=5.11.0",
    "websocket-client>=1.9.0",
    "websocket-server>=0.6.4",
    "websockets>=15.0.1",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[project.urls]
Homepage = "https://github.com/UNIkeEN/Little-UNIkeEN-Bot"
Documentation = "https://unikeen.github.io/Little-UNIkeEN-Bot/"
Issues = "https://github.com/UNIkeEN/Little-UNIkeEN-Bot/issues"
Repository = "https://github.com/UNIkeEN/Little-UNIkeEN-Bot.git"

[[tool.uv.index]]
name = "sjtug"
url = "https://mirrors.sjtug.sjtu.edu.cn/pypi/web/simple/"
default = true
